# hydroagent

./: .gitignore  README.md  REFACTORING_NOTES.md  docker-compose.yml  pyproject.toml  test_refactored_agent.py
notebooks/: prototype_v1.ipynb
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  state.py  utils.py
src/models/: __init__.py  db.py  schemas.py
src/prompts/: __init__.py  loader.py
src/prompts/templates/: planner_prompt.txt  system_prompt.yaml
src/storage/: __init__.py  checkpointer.py  memory.py
src/tools/: __init__.py  api_tools.py  base.py  data_tools.py  example_tools.py  search_tools.py
tests/: __init__.py
tests/integration/: __init__.py  test_agent.py  test_cstcloud.py
tests/unit/: __init__.py  test_utils.py
